--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
     <section class="photos">
       <div class="btn photos__btn">
-        <button class="btn">Add Photo</button>
+        <button id="add-btn" class="btn">Add Photo</button>
       </div>
       <div id="photos__wrapper" class="photos__wrapper"></div>
     </section>
@@ -42,5 +42,6 @@
         </li>
       </ul>
     </section>
+    <a class="back-top" href="#">Back To Top</a>
   </body>
 </html>
