--- a/src/register.html
+++ b/src/register.html
@@ -4,128 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
+    <title>Document</title>
   </head>
   <body>
-    <section class="vh-100" style="background-color: #eee">
-      <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-lg-12 col-xl-11">
-            <div class="card text-black" style="border-radius: 25px">
-              <div class="card-body p-md-5">
-                <div class="row justify-content-center">
-                  <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">
-                      Sign up
-                    </p>
-
-                    <form class="mx-1 mx-md-4">
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input
-                            type="text"
-                            id="form3Example1c"
-                            class="form-control"
-                          />
-                          <label class="form-label" for="form3Example1c"
-                            >Your Name</label
-                          >
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input
-                            type="email"
-                            id="form3Example3c"
-                            class="form-control"
-                          />
-                          <label class="form-label" for="form3Example3c"
-                            >Your Email</label
-                          >
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input
-                            type="password"
-                            id="form3Example4c"
-                            class="form-control"
-                          />
-                          <label class="form-label" for="form3Example4c"
-                            >Password</label
-                          >
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-row align-items-center mb-4">
-                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                        <div class="form-outline flex-fill mb-0">
-                          <input
-                            type="password"
-                            id="form3Example4cd"
-                            class="form-control"
-                          />
-                          <label class="form-label" for="form3Example4cd"
-                            >Repeat your password</label
-                          >
-                        </div>
-                      </div>
-
-                      <div
-                        class="form-check d-flex justify-content-center mb-5"
-                      >
-                        <input
-                          class="form-check-input me-2"
-                          type="checkbox"
-                          value=""
-                          id="form2Example3c"
-                        />
-                        <label class="form-check-label" for="form2Example3">
-                          I agree all statements in
-                          <a href="#!">Terms of service</a>
-                        </label>
-                      </div>
-
-                      <div
-                        class="d-flex justify-content-center mx-4 mb-3 mb-lg-4"
-                      >
-                        <button type="button" class="btn btn-primary btn-lg">
-                          Register
-                        </button>
-                      </div>
-                    </form>
-                  </div>
-                  <div
-                    class="
-                      col-md-10 col-lg-6 col-xl-7
-                      d-flex
-                      align-items-center
-                      order-1 order-lg-2
-                    "
-                  >
-                    <img
-                      src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-registration/draw1.png"
-                      class="img-fluid"
-                      alt="Sample image"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="header">
+      <h2 class="header__title">Sign Up</h2>
+      <div class="header__img">
+        <img
+          id="avatar"
+          src="https://cdn.fakercloud.com/avatars/jomarmen_128.jpg"
+          alt=""
+        />
       </div>
-    </section>
+      <button id="header__btn" class="header__btn">Random Photo</button>
+    </div>
+    <form id="add-form" class="add__form">
+      <div class="add__form-group">
+        <label for="firstname">First Name</label>
+        <input
+          name="firstName"
+          rules="required"
+          type="text"
+          placeholder="Enter Your First Name"
+          class="firstname"
+          id="firstname"
+        />
+        <small class="message"></small>
+      </div>
+      <div class="add__form-group">
+        <label for="lastname">Last Name</label>
+        <input
+          name="lastName"
+          rules="required"
+          type="text"
+          placeholder="Enter Your Last Name"
+          class="lastname"
+          id="lastname"
+        />
+        <small class="message"></small>
+      </div>
+      <div class="add__form-group">
+        <label for="email">Email</label>
+        <input
+          name="email"
+          rules="required|email"
+          type="email"
+          placeholder="Enter Your Email"
+          class="email"
+          id="email"
+        />
+        <small class="message" id="message-email"></small>
+      </div>
+      <div class="add__form-group">
+        <label for="password">Password</label>
+        <input
+          name="password"
+          rules="required|min:6"
+          type="password"
+          placeholder="Enter Password"
+          class="password"
+          id="password"
+        />
+        <small class="message"></small>
+      </div>
+      <input type="submit" placeholder="Submit" />
+      <a href="#login.html" class="btn-link">Have an account? Sign In</a>
+    </form>
   </body>
 </html>
