--- a/src/login.html
+++ b/src/login.html
@@ -36,22 +36,13 @@
                                   </div>
                               </div>
   
-                              <div class="form-group row">
-                                  <div class="col-md-6 offset-md-4">
-                                      <div class="checkbox">
-                                          <label>
-                                              <input type="checkbox" name="remember"> Remember Me
-                                          </label>
-                                      </div>
-                                  </div>
-                              </div>
   
                               <div class="col-md-6 offset-md-4">
                                   <button type="submit" class="btn btn-primary">
                                       Login
                                   </button>
-                                  <a href="#" class="btn btn-link">
-                                      Forgot Your Password?
+                                  <a class="btn btn-link">
+                                     Dont have an account? Sign Up
                                   </a>
                               </div>
                       </div>
