--- a/src/register.html
+++ b/src/register.html
@@ -10,11 +10,7 @@
     <div class="header">
       <h2 class="header__title">Sign Up</h2>
       <div class="header__img">
-        <img
-          id="avatar"
-          src="https://cdn.fakercloud.com/avatars/jomarmen_128.jpg"
-          alt=""
-        />
+        <img id="avatar" src="" alt="" />
       </div>
       <button id="header__btn" class="header__btn">Random Photo</button>
     </div>
