--- a/src/index.html
+++ b/src/index.html
@@ -30,18 +30,13 @@
       <div id="photos__wrapper" class="photos__wrapper"></div>
     </section>
     <section class="page">
-      <ul class="page__nav">
-        <li class="page__item disabled">
-          <a class="page__link" href="#">Previous</a>
-        </li>
-        <li class="page__item"><a class="page__link" href="#">1</a></li>
-        <li class="page__item"><a class="page__link" href="#">2</a></li>
-        <li class="page__item"><a class="page__link" href="#">3</a></li>
-        <li class="page__item">
-          <a class="page__link" href="#">Next</a>
-        </li>
-      </ul>
+      <div class="page__previous--btn">
+        <a class="page__link" href="#">Previous</a>
+      </div>
+      <ul class="page__nav"></ul>
+      <div class="page__next--btn">
+        <a class="page__link" href="#">Next</a>
+      </div>
     </section>
-    <a class="back-top" href="#">Back To Top</a>
   </body>
 </html>
