--- a/src/editphoto.html
+++ b/src/editphoto.html
@@ -7,7 +7,7 @@
     <title>Add Photo</title>
   </head>
   <body>
-    <h2 class="title">Add New Album</h2>
+    <h2 class="title">Edit Photo</h2>
     <form id="add-form" class="add__form">
       <div class="add__form-group">
         <label for="category">Category</label>
