fixUI-login-register

--- a/src/login.html
+++ b/src/login.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <title>Login</title>
   </head>
   <body>
-    <main class="login-form">
+    <!-- <main class="login-form">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-8">
@@ -53,6 +54,47 @@
       </div>
       </div>
   
-  </main>
+  </main> -->
+
+    <main class="main">
+      <div class="container">
+        <form id="login-form" class="login-form">
+          <h2>Login Form</h2>
+          <div class="form-group">
+            <div class="form-group-control">
+              <i class="fas fa-envelope"></i>
+              <input
+                placeholder="Email"
+                type="email"
+                id="email_address"
+                class="form-control"
+                name="email-address"
+                required
+                autofocus
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-group-control">
+              <i class="fas fa-lock"></i>
+              <input
+                placeholder="Password"
+                type="password"
+                id="password"
+                class="form-control"
+                name="password"
+              />
+            </div>
+            <span id="message"></span>
+          </div>
+
+          <div class="login-form--link">
+            <a class="btn-link">Need an account? <span>Sign up</span></a>
+          </div>
+
+          <button type="submit" class="login-form--submit">Login</button>
+        </form>
+      </div>
+    </main>
   </body>
 </html>
