--- a/src/login.html
+++ b/src/login.html
@@ -14,52 +14,10 @@
     <title>Login</title>
   </head>
   <body>
-    <!-- <main class="login-form">
-      <div class="container">
-          <div class="row justify-content-center">
-              <div class="col-md-8">
-                  <div class="card">
-                      <div class="card-header">Login</div>
-                      <div class="card-body">
-                          <form id="login-form">
-                              <div class="form-group row">
-                                  <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
-                                  <div class="col-md-6">
-                                      <input type="text" id="email_address" class="form-control" name="email-address" required autofocus>
-                                  </div>
-                              </div>
-  
-                              <div class="form-group row">
-                                  <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                                  <div class="col-md-6">
-                                      <input type="password" id="password" class="form-control" name="password" required>
-                                      <span id="message"></span>
-                                  </div>
-                              </div>
-  
-  
-                              <div class="col-md-6 offset-md-4">
-                                  <button type="submit" class="btn btn-primary">
-                                      Login
-                                  </button>
-                                  <a class="btn btn-link">
-                                     Dont have an account? Sign Up
-                                  </a>
-                              </div>
-                      </div>
-                      </form>
-                  </div>
-              </div>
-          </div>
-      </div>
-      </div>
-  
-  </main> -->
-
     <main class="main">
       <div class="container">
         <form id="login-form" class="login-form">
-          <h2>Login Form</h2>
+          <h2>Sign In</h2>
           <div class="form-group">
             <div class="form-group-control">
               <i class="fas fa-envelope"></i>
@@ -92,7 +50,7 @@
             <a class="btn-link">Need an account? <span>Sign up</span></a>
           </div>
 
-          <button type="submit" class="login-form--submit">Login</button>
+          <button type="submit" class="login-form--submit">Sign In</button>
         </form>
       </div>
     </main>
